--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
 <body>
     <a href="https://netology.ru">Netology</a>
     <p>Lorem ipsum</p>
+    <p>
+ create a new repository on the command line
+
+echo "# remote_sample" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/M0r0shka/remote_sample.git
+git push -u origin main
+
+…or push an existing repository from the command line
+
+git remote add origin https://github.com/M0r0shka/remote_sample.git
+git branch -M main
+git push -u origin main
+
+…or import code from another repository
+    </p>
 </body>
 </html>
